RHEL6: packages for Ruby bootstrap
Brew requires a Ruby with openssl. Add openssl-devel package explicitly
for RHEL6 family as this is not brought in by other packages.

--- a/containers/docker/centos/6/Dockerfile
+++ b/containers/docker/centos/6/Dockerfile
@@ -9,6 +9,7 @@ RUN yum update -y && \
     HEP_OSlibs_SL6 \
     expat-devel \
     git \
+    openssl-devel \
     ruby-irb \
     redhat-lsb-core && \
   yum groupinstall -y "Development Tools"
