--- a/containers/docker/centos/6/Dockerfile
+++ b/containers/docker/centos/6/Dockerfile
@@ -34,5 +34,5 @@ CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
   ./cadfael-installer && \
   cd Cadfael.git/bin && \
   brew install cadfael && \
-  brew ls --versions
-
+  brew ls --versions && \
+  brew info
