--- a/containers/docker/centos/7/Dockerfile
+++ b/containers/docker/centos/7/Dockerfile
@@ -33,5 +33,6 @@ CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
   ./cadfael-installer && \
   cd Cadfael.git/bin && \
   brew install cadfael && \
-  brew ls --versions
+  brew ls --versions && \
+  brew info
 
