Documentation improvements on system packages
Improve description of RHEL family required packages, and link to
install instructions for HEP_OSlibs compatibility package.

Add minimal README for centos docker containers.

Add yum-utils to SLC5 image in case we need to resolve deps of
HEP_OSlibs.

--- a/containers/docker/centos/5/Dockerfile
+++ b/containers/docker/centos/5/Dockerfile
@@ -27,7 +27,8 @@ RUN yum update -y && \
     libXext-devel \
     libXfixes-devel \
     libXft-devel \
-    libXpm-devel && \
+    libXpm-devel \
+    yum-utils && \
   yum groupinstall -y "Development Tools"
 
 # Create user
