--- a/containers/docker/centos/6/Dockerfile
+++ b/containers/docker/centos/6/Dockerfile
@@ -20,7 +20,7 @@ RUN useradd -m -U cadfael
 # Now our own user and basic "at container entry" setup
 USER cadfael
 WORKDIR /home/cadfael
-ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
+#ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
 
 # ---------------------------------------------------------------------
 # What actually happens when we RUN the container under "docker run"
@@ -33,6 +33,5 @@ CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
   cd cadfael-installer && \
   ./cadfael-installer && \
   cd Cadfael.git/bin && \
-  brew install cadfael && \
-  brew ls --versions && \
-  brew info
+  ./brew ls --versions && \
+  ./brew info
