--- a/containers/docker/ubuntu/14.04/Dockerfile
+++ b/containers/docker/ubuntu/14.04/Dockerfile
@@ -28,7 +28,7 @@ RUN useradd -m -U cadfael
 # Now our own user and basic "at container entry" setup
 USER cadfael
 WORKDIR /home/cadfael
-ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
+#ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
 
 # ---------------------------------------------------------------------
 # What actually happens when we RUN the container under "docker run"
@@ -40,6 +40,6 @@ ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
 CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
   cd cadfael-installer && \
   ./cadfael-installer && \
-  brew install cadfael && \
-  brew ls --versions && \
-  brew info
+  cd Cadfael.git/bin && \
+  ./brew ls --versions && \
+  ./brew info
