Update Dockerfiles for building cadfael
- Add `brew test falaise` step in existing containers
  - Note that this currently fails under OS X docker
    due to errors in creating a tempfile via mkstemp.
    TODO: determine cause of this issue.
- Update docs for running docker/docker-toolbox on OS X
- Preliminary Dockerfile for Ubuntu 16.04LTS
  - Can generate basic brew system by not install beyond binutils
  - Likely system incompatibility between system libc/binutils
    and older linuxbrew binutils

--- a/containers/docker/ubuntu/14.04/Dockerfile
+++ b/containers/docker/ubuntu/14.04/Dockerfile
@@ -41,5 +41,6 @@ CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
   cd cadfael-installer && \
   ./cadfael-installer && \
   cd Cadfael.git/bin && \
+  ./brew test falaise && \
   ./brew ls --versions && \
   ./brew info
