Migrate dockerfiles to new cadfael install
Use new bootstrapping command to install deps, before using
explicit install of falaise.

--- a/containers/docker/centos/6/Dockerfile
+++ b/containers/docker/centos/6/Dockerfile
@@ -29,10 +29,10 @@ WORKDIR /home/cadfael
 # containers for continuous builds The sections above could be used
 # as a base image here (probably)
 # Also, can pass args so could checkout tags, build tarballs
-CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
-  cd cadfael-installer && \
-  ./cadfael-installer && \
-  cd Cadfael.git/bin && \
-  ./brew test falaise && \
-  ./brew ls --versions && \
-  ./brew info
+CMD git clone https://github.com/SuperNEMO-DBD/cadfaelbrew.git && \
+  cd cadfaelbrew && \
+  ./bin/brew cadfael-bootstrap && \
+  ./bin/brew install falaise && \
+  ./bin/brew ls --versions && \
+  ./bin/brew info
+
