--- a/docker/centos/7/Dockerfile
+++ b/docker/centos/7/Dockerfile
@@ -29,6 +29,19 @@ USER cadfael
 WORKDIR /home/cadfael
 #ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
 
+RUN git config --global user.name "Cadfael" && \
+    git config --global user.email " "
+ 
+#Basic tool layer
+RUN git clone --depth 1 https://github.com/SuperNEMO-DBD/brew.git && \
+    cd brew && \
+    ./bin/brew update && \
+    ./bin/brew pull --no-publish https://github.com/SuperNEMO-DBD/homebrew-cadfael/pull/11 && \
+    ./bin/brew cadfael-bootstrap && \
+    ./bin/brew install --only-dependencies bayeux bayeux@2 && \
+    ./bin/brew cleanup -s && \
+    rm -Rf $(./bin/brew --cache)
+
 # ---------------------------------------------------------------------
 # What actually happens when we RUN the container under "docker run"
 # Also look at ENTRYPOINT. However, note that we're using the container
