Add base Ubuntu 16.04 Dockerfile
Update dockerfile to build Ubuntu 16.04 based image, adding:

- System requirements for Falaise install
- Base brew system
- Bootstrap packages
- All Formulae installed by `brew install falaise --only-dependencies`

This shows similar overall size with differing layers, so can
use as a suitable base image for creating runtime or test images.

TODO: Roll out to Ubuntu 14 and CentOS. Decide on repo/tagging names.

--- a/docker/ubuntu/16.04/Dockerfile
+++ b/docker/ubuntu/16.04/Dockerfile
@@ -3,48 +3,57 @@ MAINTAINER Ben Morgan <Ben.Morgan@warwick.ac.uk>
 
 # Update and install base packages for CadfaelBrew - will be added to
 # as we identify base system requirements
-RUN apt-get update && apt-get install -y \
-  # Not in base system or newly needed
-  lsb-release \
-  iputils-ping \
-  # Known from Ubuntu 14
-  build-essential \
-  curl \
-  git \
-  m4 \
-  libbz2-dev \
-  libcurl4-openssl-dev \
-  libexpat-dev \
-  libncurses-dev \
-  ruby \
-  texinfo \
-  zlib1g-dev \
-  libx11-dev \
-  libxpm-dev \
-  libxft-dev \
-  libxext-dev \
-  libpng12-dev \
-  libjpeg-dev
+RUN apt-get update \ 
+    && apt-get install -y --no-install-recommends \
+       build-essential \
+       curl \
+       file \
+       git \
+       iputils-ping \
+       libbz2-dev \
+       libcurl4-openssl-dev \
+       libexpat1-dev \
+       libncurses5-dev \
+       libx11-dev \
+       libxpm-dev \
+       libxft-dev \
+       libxext-dev \
+       libpng12-dev \
+       libjpeg-dev \
+       libegl1-mesa-dev \
+       libgl1-mesa-dev \
+       libglu1-mesa-dev \
+       libgles2-mesa-dev \
+       locales \
+       lsb-release \
+       m4 \
+       python-setuptools \
+       ruby \
+       texinfo \
+       zlib1g-dev
 
-# Create user
-RUN useradd -m -U cadfael
+# Setup basic system/user
+RUN localedef -i en_US -f UTF-8 en_US.UTF-8 \
+    && useradd -m -s /bin/bash linuxbrew
 
-# Now our own user and basic "at container entry" setup
-USER cadfael
-WORKDIR /home/cadfael
-#ENV PATH /home/cadfael/cadfael-installer/Cadfael.git/bin:$PATH
+# Linuxbrew layer
+RUN git clone https://github.com/SuperNEMO-DBD/brew.git /home/linuxbrew/.linuxbrew \
+    && chown -R linuxbrew: /home/linuxbrew/.linuxbrew
 
-# ---------------------------------------------------------------------
-# What actually happens when we RUN the container under "docker run"
-# Also look at ENTRYPOINT. However, note that we're using the container
-# as a one off builder! May want interactivity and/or daemon style
-# containers for continuous builds The sections above could be used
-# as a base image here (probably)
-# Also, can pass args so could checkout tags, build tarballs
-CMD git clone https://github.com/SuperNEMO-DBD/cadfael-installer.git && \
-  cd cadfael-installer && \
-  ./cadfael-installer && \
-  cd Cadfael.git/bin && \
-  ./brew test falaise && \
-  ./brew ls --versions && \
-  ./brew info
+# Switch to user
+USER linuxbrew
+WORKDIR /home/linuxbrew
+ENV PATH=/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin:$PATH \
+	  SHELL=/bin/bash
+
+# Install bootstrap layer
+RUN brew update \
+    && brew cadfael-bootstrap \
+    && brew cleanup -s \
+    && rm -Rf $(brew --cache)
+
+# Install Falaise dependency layer
+RUN brew install falaise --only-dependencies \
+    && brew cleanup -s \
+    && rm -Rf $(brew --cache)
+
