Base Dockerfiles for Falaise CI and Production
Update CentOS and Ubuntu Dockerfiles to provide a base install
of the system and linuxbrew requirements for Falaise.

Change USER to linuxbrew and installation of brew to $HOME/.linuxbrew
for future compatibility with upstream linuxbrew.

Use base Ubuntu 16.04 image to create image including and install
of Falaise. Update docker README to describe use and build of
images.

--- a/docker/ubuntu/14.04/Dockerfile
+++ b/docker/ubuntu/14.04/Dockerfile
@@ -3,65 +3,56 @@ MAINTAINER Ben Morgan <Ben.Morgan@warwick.ac.uk>
 
 # Update and install base packages for CadfaelBrew - will be added to
 # as we identify base system requirements
-RUN apt-get update && apt-get install -y \
-  build-essential \
-  curl \
-  file \
-  git \
-  python-setuptools \
-  ruby2.0 \
-  m4 \
-  libbz2-dev \
-  libcurl4-openssl-dev \
-  libexpat-dev \
-  libncurses-dev \
-  texinfo \
-  zlib1g-dev \
-  libx11-dev \
-  libxpm-dev \
-  libxft-dev \
-  libxext-dev \
-  libpng12-dev \
-  libjpeg-dev \
-  libegl1-mesa-dev \
-  libgl1-mesa-dev \
-  libglu1-mesa-dev \
-  libgles2-mesa-dev
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       build-essential \
+       curl \
+       file \
+       git \
+       python-setuptools \
+       ruby2.0 \
+       m4 \
+       libbz2-dev \
+       libcurl4-openssl-dev \
+       libexpat-dev \
+       libncurses-dev \
+       texinfo \
+       zlib1g-dev \
+       libx11-dev \
+       libxpm-dev \
+       libxft-dev \
+       libxext-dev \
+       libpng12-dev \
+       libjpeg-dev \
+       libegl1-mesa-dev \
+       libgl1-mesa-dev \
+       libglu1-mesa-dev \
+       libgles2-mesa-dev
 
-# Need locales
-RUN locale-gen "en_US.UTF-8" && dpkg-reconfigure locales
+# Set up basic system and user
+RUN locale-gen "en_US.UTF-8" \
+    && dpkg-reconfigure locales \
+    && useradd -m -s /bin/bash linuxbrew
 
-# Create user
-RUN useradd -m -U cadfael
+# Linuxbrew layer
+RUN git clone https://github.com/SuperNEMO-DBD/brew.git /home/linuxbrew/.linuxbrew \
+    && chown -R linuxbrew: /home/linuxbrew/.linuxbrew
 
-# Now our own user and basic "at container entry" setup
-USER cadfael
-WORKDIR /home/cadfael
+# Switch to user
+USER linuxbrew
+WORKDIR /home/linuxbrew
+ENV PATH=/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin:$PATH \
+    SHELL=/bin/bash \
+    USER=linuxbrew
 
-RUN git config --global user.name "Cadfael" && \
-    git config --global user.email " "
+# Install bootstrap layer
+RUN brew update \
+    && brew cadfael-bootstrap \
+    && brew cleanup -s \
+    && rm -Rf $(brew --cache)
 
-#Basic tool layer
-RUN git clone --depth 1 https://github.com/SuperNEMO-DBD/brew.git && \
-    cd brew && \
-    ./bin/brew update && \
-    ./bin/brew pull --no-publish https://github.com/SuperNEMO-DBD/homebrew-cadfael/pull/11 && \
-    ./bin/brew cadfael-bootstrap && \
-    ./bin/brew install --only-dependencies bayeux bayeux@2 && \
-    ./bin/brew cleanup -s && \
-    rm -Rf $(./bin/brew --cache)
+# Install Falaise dependency layer
+RUN brew install falaise --only-dependencies \
+    && brew cleanup -s \
+    && rm -Rf $(brew --cache)
 
-
-# ---------------------------------------------------------------------
-# What actually happens when we RUN the container under "docker run"
-# Also look at ENTRYPOINT. However, note that we're using the container
-# as a one off builder! May want interactivity and/or daemon style
-# containers for continuous builds The sections above could be used
-# as a base image here (probably)
-# Also, can pass args so could checkout tags, build tarballs
-CMD git clone https://github.com/SuperNEMO-DBD/brew.git && \
-  cd cadfaelbrew && \
-  ./bin/brew cadfael-bootstrap && \
-  ./bin/brew install falaise && \
-  ./bin/brew ls --versions && \
-  ./bin/brew info
