--- a/docker/centos/6/Dockerfile
+++ b/docker/centos/6/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER Ben Morgan <Ben.Morgan@warwick.ac.uk>
 ADD RPM-GPG-KEY-cern /etc/pki/rpm-gpg/RPM-GPG-KEY-cern
 ADD HEP_OSlibs.repo /etc/yum.repos.d/HEP_OSlibs.repo
 RUN yum update -y \
+    && yum install epel-release -y \
     && yum install -y \
        HEP_OSlibs_SL6 \
        expat-devel \
