[CentOS7] Install falaise dependency layer

--- a/docker/centos/7/Dockerfile
+++ b/docker/centos/7/Dockerfile
@@ -43,7 +43,7 @@ RUN brew update \
     && rm -Rf $(brew --cache)
 
 # Install Falaise dependency layer
-#RUN brew install falaise --only-dependencies \
-#    && brew cleanup -s \
-#    && rm -Rf $(brew --cache)
+RUN brew install falaise --only-dependencies \
+    && brew cleanup -s \
+    && rm -Rf $(brew --cache)
 
